organize the directory for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://duong-vo.github.io/personal-webpage",
+  "homepage": "http://duong-vo.github.io/",
   "name": "personal-webpage",
   "version": "0.1.0",
   "private": true,
